--- a/.github/workflows/apply-po4a-on-comment.yml
+++ b/.github/workflows/apply-po4a-on-comment.yml
@@ -66,7 +66,7 @@ jobs:
             git push
             echo 'Changes committed successfully 🎉' >> body.txt
             echo 'Please update your local branch by running `git pull` 💻' >> body.txt
-            echo 'Bear in mind that I\'m a bot 🤖 so I can\'t triiger workflows!' >> body.txt
+            echo 'Bear in mind that I am a bot 🤖 so I cannot trigger workflows!' >> body.txt
           else
             echo 'Nothing to commit, `po4a` run was clean ✨' >> body.txt
           fi
